--- a/project/config/packages/security.yaml
+++ b/project/config/packages/security.yaml
@@ -30,12 +30,16 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
+    role_hierarchy:
+        ROLE_RESPONSABLE: ROLE_USER
+        ROLE_ADMIN: ROLE_RESPONSABLE
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/register, roles: ROLE_ADMIN }
+        - { path: ^/activity, roles: ROLE_RESPONSABLE }
+        - { path: ^/supplement, roles: ROLE_RESPONSABLE }
+        - { path: ^/developper, roles: ROLE_RESPONSABLE }
 
 when@test:
     security:
